# etherlab-examples

./: .gitignore  README.MD  SETUP_ETHERCAT.MD  SETUP_RTPC.MD
appinterface_minexample/: .gitignore  appint_minex_extmode.mdl  appint_minex_extmode_open.m  build.sh  build_dep_simulink.sh  sync.sh
appinterface_minexample/rt_interface/: Makefile  generate_block.m
appinterface_minexample/rt_interface/ros_rt_core/: SL_func.h  bus_SL_IN.m  bus_SL_OUT.m
appinterface_minexample/sl_interface/: CMakeLists.txt
appinterface_minexample/sl_interface/src/: SL_func.h  assert.h  node.cpp  test_interface.cpp
appinterface_ros/: .gitignore  appint_ros_example.mdl  appint_ros_example_open.m  build.sh  sync.sh
appinterface_ros/catkin_ws/: .gitignore
appinterface_ros/catkin_ws/scripts/: autostart.sh
appinterface_ros/catkin_ws/src/pcu_common/: package.xml
appinterface_ros/catkin_ws/src/pcu_sl_interface/: CMakeLists.txt
appinterface_ros/catkin_ws/src/pcu_sl_interface/src/: SL_func.h  node.cpp
appinterface_ros/example_data/: robot_env_forearmbot
appinterface_ros/ros_rt_interface/: Makefile
appinterface_ros/ros_rt_interface/ros_rt_core/: SL_func.h  bus_SL_IN.m
devices/: README.MD
devices/EtherLab/: EL5101.mdl  EL7211.mdl  Maxon.m  Maxon.mdl  S600_geschwindigkeitsregelung.m  imu_EtherCAT_shield.mdl
devices/KMS40/: KMS.mdl  sync.sh
devices/KMS40/catkin_ws/src/pcu_common/: setup.py
devices/KMS40/catkin_ws/src/pcu_sl_interface/: package.xml
devices/KMS40/catkin_ws/src/pcu_sl_interface/msg/: ControllerState.msg
devices/KMS40/catkin_ws/src/pcu_sl_interface/src/: test_interface.cpp
devices/KMS40/catkin_ws/src/weiss_kms40/: CMakeLists.txt
devices/KMS40/catkin_ws/src/weiss_kms40/src/: Kms40Driver.cpp
devices/KMS40/ros_rt_interface/: pcu_ros_load_buses.m
devices/KMS40/ros_rt_interface/ros_rt_core/: SL_func.h  SL_func_dummy.cpp  bus_SL_OUT.m
devices/Mini40/: build_dep_simulink.sh
devices/Mini40/catkin_ws/scripts/: source_ros_install.sh
devices/Mini40/catkin_ws/src/pcu_common/: CMakeLists.txt
devices/Mini40/catkin_ws/src/pcu_sl_interface/msg/: JointsVector.msg
devices/Mini40/catkin_ws/src/pcu_sl_interface/scripts/: client_test.py
devices/Mini40/catkin_ws/src/pcu_sl_interface/srv/: SetState.srv
devices/Mini40/ros_rt_interface/: generate_block.m
devices/ixxat/: README.MD
devices/ni/: NI9144_NI9401_example.mdl  README.MD
extmode_minexample/: .gitignore  extmode_minimal.mdl  extmode_minimal_postprocess.m
ixxat/: .gitignore  ETCio100_example.mdl  etcio100_slave.m
ni/: NI9144_NI9401_slave.m
sensors_actuators/EtherLab/: EL3104.mdl  EL3702.mdl  EL4102.mdl  EL5101.m  EL7211_positionsregelung.m  EL7211_stromregelung.m  EL7221.m  EL7221.mdl  README.MD  S600_stromregelung.m  S600_stromregelung.mdl  imu_EtherCAT_shield.m
sensors_actuators/Weitere_Sensoren/KMS40/: README.MD  build.sh
sensors_actuators/Weitere_Sensoren/KMS40/catkin_ws/src/pcu_common/src/pcu_common_utils/: __init__.py
sensors_actuators/Weitere_Sensoren/KMS40/catkin_ws/src/pcu_sl_interface/cfg/: model.cfg
sensors_actuators/Weitere_Sensoren/KMS40/catkin_ws/src/pcu_sl_interface/src/: NIDAQmx.h  SL_func.h  node.cpp
sensors_actuators/Weitere_Sensoren/KMS40/catkin_ws/src/weiss_kms40/: package.xml
sensors_actuators/Weitere_Sensoren/KMS40/catkin_ws/src/weiss_kms40/launch/: config.yaml  kms40.launch
sensors_actuators/Weitere_Sensoren/KMS40/ros_rt_interface/ros_rt_core/: bus_SL_IN.m
sensors_actuators/Weitere_Sensoren/Mini40/: README.MD
sensors_actuators/Weitere_Sensoren/Mini40/catkin_ws/scripts/: autostart.sh
sensors_actuators/Weitere_Sensoren/Mini40/catkin_ws/src/pcu_common/src/pcu_common_utils/: AcquireRessource.py
sensors_actuators/Weitere_Sensoren/Mini40/catkin_ws/src/pcu_sl_interface/: CMakeLists.txt
sensors_actuators/Weitere_Sensoren/Mini40/catkin_ws/src/pcu_sl_interface/src/: node.cpp
