<?xml version="1.0"?>
<package>
    <name>pcu_common</name>
    <version>1.0.0</version>
    <description>Common dependencies for the PCU environment</description>
    <maintainer email="moritz.schappler@imes.uni-hannover.de">user</maintainer>
    <license>MIT</license>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    
    <export>
    </export>
</package>
